syntax = "proto3";

package greet;

message Greeting{
	string first_name=1;
	string last_name=2;
}

message GreetingRequest{
	Greeting greeting=1;
}

message GreetingResponse{
	string result=1;
}

message GreetManyTimesRequest{
	Greeting greeting=1;
}

message GreetManyTimesResponse{
	string result=1;
}

message LongGreetRequest{
	Greeting greeting=1;
}

message LongGreetResponse{
	string result=1;
}

message GreetEveryoneRequest{
	Greeting greeting=1;
}

message GreetEveryoneResponse{
	string result=1;
}

service GreetingService{
	//UNARY
	rpc Greet (GreetingRequest) returns (GreetingResponse) {}

	//SERVER STREAMING
	rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {}

	//CLIENT STREAMING
	rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {}

	//BI-DIRECTIONAL STREAMING (BiDi)
	rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {}

}